# pystog

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  Pipfile  README  README.md  ch4_10k_original.sq  codecov.yml  environment.yml  package.sh  pyproject.toml  pystog.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stog_input.txt  stog_input_lorched.txt  tox.ini  versioneer.py
.github/workflows/: actions.yml  cd.yml  ci.yml  package.yml  test.yml  test_and_deploy.yml  update-lockfile.yml
conda.recipe/: meta.yaml
data/: README.md  argon.fq_keen  co2_2k_original.sq
data/examples/: argon_pystog.json  input.json
data/lammps_inputs/: Ni.eam.fs  diamond.gr  in.argon  in.diamond  in.nickel
data/test_data/: argon.dcs  argon.fq  argon.sq  nickel.gr
docs/source/: about.rst  conf.py  index.rst  install.rst  pystog.rst
docs/source/pystog/: converter.rst  fourier_filter.rst  stog.rst  transformer.rst
fortran/: README.md  stog_input.txt  stog_input_ft.txt  stog_input_ft_lorched.txt  stog_input_lorched.txt  stog_new3.f90  stog_verbose.txt
pystog/: README.md  __init__.py  _version.py  argon_pystog.json  cli.py  converter.py  fourier_filter.py  input.json  io.py  pre_proc.py  pystog.py  pytransformer.py  rebin.py  stog.py  transformer.py  transformer_cli.py  transformer_unit_test.sh  utils.py  xyplot.py
src/pystog/: __init__.py  cli.py  converter.py  fourier_filter.py  io.py  pre_proc.py  stog.py  transformer.py  utils.py  version.py
test/: stog_input_ft.txt  stog_new3.f90  stog_verbose.txt
tests/: converter.py  create_test_files.py  materials.py  nickel_pdffit_tester.py  runner.py  test_cli.py  test_converter.py  test_fourier_filter.py  test_io.py  test_stog.py  test_transformer.py  utils.py
tests/extra/: nickel_pdffit_tester.py
tests/test_data/: argon.gr
tutorials/: example01_using_converter.ipynb  example02_using_transformer.ipynb  example04_using_stog.ipynb
